_sass/_base.scss
/* ... */
figure,
img {
  max-width: 90vw;
}

blockquote {
  background: var(--global-bg-color);
  border-left: 5px solid var(--global-theme-color);
  margin: 1.5em 0;
  padding: 1em;
  font-size: 1.2rem;

  p {
    margin-bottom: 0;
  }

  /* Tips, warnings, and dangers blockquotes */
  &.block-tip {
    border-color: var(--global-tip-block);
    background-color: var(--global-tip-block-bg);

    p {
      color: var(--global-tip-block-text);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--global-tip-block-title);
    }
  }

  &.block-warning {
    border-color: var(--global-warning-block);
    background-color: var(--global-warning-block-bg);

    p {
      color: var(--global-warning-block-text);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--global-warning-block-title);
    }
  }

  &.block-danger {
    border-color: var(--global-danger-block);
    background-color: var(--global-danger-block-bg);

    p {
      color: var(--global-danger-block-text);
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      color: var(--global-danger-block-title);
    }
  }
}

// Math

.equation {
  margin-bottom: 1rem;
  text-align: center;
}

// Caption

.caption {
  font-size: 0.875rem;
  margin-top: 0.75rem;
  margin-bottom: 1.5rem;
  text-align: center;
}

// Card

.card {
  background-color: var(--global-card-bg-color);

  img {
    width: 100%;
  }

  .card-title {
    color: var(--global-text-color);
  }

  .card-item {
    width: auto;
    margin-bottom: 10px;

    .row {
      display: flex;
      align-items: center;
    }
  }
}

// Citation

.citation,
.citation-number {
  color: var(--global-theme-color);
}

// Profile

.profile {
  width: 100%;

  .more-info {
    margin-bottom: 5px;
    margin-top: 5px;
    font-family: monospace;

    p {
      display: inline-block;
      margin: 0;
    }
  }
}

.profile.float-right {
  margin-left: 1rem;
}

.profile.float-left {
  margin-right: 1rem;
}

@media (min-width: 576px) {
  .profile {
    width: 30%;

    .address {
      p {
        display: block;
      }
    }
  }
}

.post-description {
  margin-bottom: 2rem;
  font-size: 0.875rem;

  a {
    color: inherit;

    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}

// Navbar customization

.navbar {
  box-shadow: none;
  border-bottom: 1px solid var(--global-divider-color);
  background-color: var(--global-bg-color);
  opacity: 0.95;
}

.navbar .dropdown-menu {
  background-color: var(--global-bg-color);
  border: 1px solid var(--global-divider-color);

  a:not(.active) {
    color: var(--global-text-color);
  }

  a:hover {
    color: var(--global-hover-color);
  }

  .dropdown-divider {
    border-top: 1px solid var(--global-divider-color) !important;
  }
}

.dropdown-item {
  color: var(--global-text-color);

  &:hover {
    color: var(--global-hover-color);
    background-color: var(--global-bg-color);
  }
}

.navbar.navbar-light {
  a {
    &:hover {
      text-decoration: none;
    }
  }

  .navbar-brand {
    color: var(--global-text-color);
  }

  .navbar-nav .nav-item .nav-link {
    color: var(--global-text-color);

    &:hover {
      color: var(--global-hover-color);
    }
  }

  .navbar-nav .nav-item.active > .nav-link {
    background-color: inherit;
    font-weight: bolder;
    color: var(--global-theme-color);

    &:hover {
      color: var(--global-hover-color);
    }
  }

  .navbar-brand.social {
    padding-bottom: 0;
    padding-top: 0;
    font-size: 1.7rem;

    a {
      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }

      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }
}

.navbar-toggler {
  .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    background-color: var(--global-text-color);
    border-radius: 1px;
    margin-bottom: 4px;
    transition: all 0.2s;
  }

  .top-bar {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
  }

  .middle-bar {
    opacity: 0;
  }

  .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
  }
}

.navbar-toggler.collapsed {
  .top-bar {
    transform: rotate(0);
  }

  .middle-bar {
    opacity: 1;
  }

  .bottom-bar {
    transform: rotate(0);
  }
}

#light-toggle {
  padding: 0;
  border: 0;
  background-color: inherit;
  color: var(--global-text-color);

  &:hover {
    color: var(--global-hover-color);
  }
}

// Social (bottom)

.social {
  text-align: center;

  .contact-icons {
    font-size: 2rem;

    a {
      i::before {
        color: var(--global-text-color);
        transition-property: all 0.2s ease-in-out;
      }

      &:hover {
        i::before {
          color: var(--global-theme-color);
        }
      }
    }
  }

  .contact-note {
    font-size: 0.8rem;
  }
}

.wechat-modal {
  display: none;
  position: fixed;
  z-index: 1;
  padding-top: 100px;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: rgb(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.8);
}

.wechat-modal > img {
  display: block;
  position: relative;
  top: 50%;
  left: 50%;
  width: 33%;
  max-width: 400px;
  transform: translate(-50%, -50%);
}

@media only screen and (max-width: 400px) {
  .wechat-modal > img {
    width: 100%;
  }
}

// Footer
footer.fixed-bottom {
  background-color: var(--global-footer-bg-color);
  font-size: 0.75rem;

  .container {
    color: var(--global-footer-text-color);
    padding-top: 9px;
    padding-bottom: 8px;
    text-align: center;
  }

  a {
    color: var(--global-footer-link-color);

    &:hover {
      color: var(--global-theme-color);
      text-decoration: none;
    }
  }
}

footer.sticky-bottom {
  border-top: 1px solid var(--global-divider-color);
  padding-top: 40px;
  padding-bottom: 40px;
  font-size: 0.9rem;

  .container {
    text-align: center;
  }
}
/* ... */

